<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/item_post_border_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_post_height"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_timer_black_48dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llContent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/item_post_content_margin">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true" />

                    <TextView
                        android:id="@+id/tvData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                    android:contentDescription="@string/up_button"
                    style="?android:attr/borderlessButtonStyle"/>

                <ImageButton
                    android:id="@+id/btnDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:contentDescription="@string/down_button"
                    style="?android:attr/borderlessButtonStyle"/>

                <ImageButton
                    android:id="@+id/btnComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_comment_black_24dp"
                    android:contentDescription="@string/comments_button"
                    style="?android:attr/borderlessButtonStyle"/>

                <ImageButton
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_playlist_add_black_24dp"
                    android:contentDescription="@string/save_button"
                    style="?android:attr/borderlessButtonStyle" />

                <ImageButton
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_share_black_24dp"
                    android:contentDescription="@string/share_button"
                    style="?android:attr/borderlessButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>